#include <string>

struct Achievement {
  int achievement_id;        
  int game_id;               
  std::string name;
  std::string goal;
};
