struct LibraryCollection 
{
  int collection_id;         
  int library_id;         
};
