struct Progress {
    int library_id;         
    int game_id;
    int Hours_played;
};
