#include <string>

struct User 
{
  int user_id;
  std::string username;
  std::string password;
};
