#include <string>
#include <ctime>
struct Game {
    int game_id;      
    double price;
    std::string description;
    time_t release_date;
};
