#include <string>
#include <ctime>

struct Information
{
  int user_id;
  std::string phoneNumber;
  std::string email;
  time_t birthday;
};
