struct Library {
    int library_id; 
    int user_id;          
};
